positional_derive/tests/ui/path-attributes.stderr
error: failed to parse field attribute

         = note: expected attribute arguments in parentheses: #[field(...)]

 --> tests/ui/path-attributes.rs:5:5
  |
5 |     #[field]
  |     ^^^^^^^^
